<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Hat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:text="@string/laps_card"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/buttonGrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Hat"
        android:layout_centerInParent="true"
        android:padding="1dp">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/degis"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/button"
            android:text="@string/kalk" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/button"
            android:text="@string/var" />

        <Spinner
            android:id="@+id/kalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView">


        </Spinner>

        <Spinner
            android:id="@+id/var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kalk"
            android:layout_toEndOf="@+id/textView2">


        </Spinner>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/kalk"
            android:text="@string/ara" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/buttonGrup"
        android:baselineAligned="false"
        >

        <RelativeLayout
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright">

            <TextView
                android:id="@+id/kalk1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="kalk1"


                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light">

            <TextView
                android:id="@+id/kalk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="k2"


                />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>